Too long code lines no longer create jarring whitespace (still not ideal, but looks slightly better).

--- a/frontend/src/components/routes/RepoFile/code.css
+++ b/frontend/src/components/routes/RepoFile/code.css
@@ -1,3 +1,15 @@
 .hoverableCode:hover {
+    /*background-color: #bae7ff;*/
+}
+
+.hoverablePre {
+
+}
+
+.hoverablePre:hover {
     background-color: #bae7ff;
+}
+
+pre[class*=language-] {
+    background-color: transparent;
 }
